Finished processing state data

--- a/analyses/notebooks/process_state_time_series.ipynb
+++ b/analyses/notebooks/process_state_time_series.ipynb
@@ -7,12 +7,12 @@
    "source": [
     "# Process State-Level Population-Weighted Meteorology Time Series\n",
     "\n",
-    "This notebook process the time-series of historical population-weighted meteorology for each of the 48 contiguous U.S. states and the District of Columbia."
+    "This notebook process the time-series of historical population-weighted meteorology for each of the 48 contiguous U.S. states."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "27e597e9-538f-41d4-afa9-a268b10ab1df",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "bd887600-32da-46dc-b411-fa63c75f564f",
    "metadata": {
     "pycharm": {
@@ -61,142 +61,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "947b41c7-c488-4716-99d1-c98f4a91b5b9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>FIPS</th>\n",
-       "      <th>State</th>\n",
-       "      <th>Population</th>\n",
-       "      <th>Population_Fraction</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1001</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>55869</td>\n",
-       "      <td>0.011394</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1003</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>223234</td>\n",
-       "      <td>0.045528</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1005</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>24686</td>\n",
-       "      <td>0.005035</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1007</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>22394</td>\n",
-       "      <td>0.004567</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1009</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>57826</td>\n",
-       "      <td>0.011794</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3137</th>\n",
-       "      <td>56037</td>\n",
-       "      <td>Wyoming</td>\n",
-       "      <td>42343</td>\n",
-       "      <td>0.073162</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3138</th>\n",
-       "      <td>56039</td>\n",
-       "      <td>Wyoming</td>\n",
-       "      <td>23464</td>\n",
-       "      <td>0.040542</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3139</th>\n",
-       "      <td>56041</td>\n",
-       "      <td>Wyoming</td>\n",
-       "      <td>20226</td>\n",
-       "      <td>0.034947</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3140</th>\n",
-       "      <td>56043</td>\n",
-       "      <td>Wyoming</td>\n",
-       "      <td>7805</td>\n",
-       "      <td>0.013486</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3141</th>\n",
-       "      <td>56045</td>\n",
-       "      <td>Wyoming</td>\n",
-       "      <td>6927</td>\n",
-       "      <td>0.011969</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3142 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       FIPS    State  Population  Population_Fraction\n",
-       "0      1001  Alabama       55869             0.011394\n",
-       "1      1003  Alabama      223234             0.045528\n",
-       "2      1005  Alabama       24686             0.005035\n",
-       "3      1007  Alabama       22394             0.004567\n",
-       "4      1009  Alabama       57826             0.011794\n",
-       "...     ...      ...         ...                  ...\n",
-       "3137  56037  Wyoming       42343             0.073162\n",
-       "3138  56039  Wyoming       23464             0.040542\n",
-       "3139  56041  Wyoming       20226             0.034947\n",
-       "3140  56043  Wyoming        7805             0.013486\n",
-       "3141  56045  Wyoming        6927             0.011969\n",
-       "\n",
-       "[3142 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Read in the county-level population data:\n",
     "pop_df = pd.read_csv(metadata_input_dir + 'county_populations_2000_to_2019_long_format.csv')\n",
@@ -220,7 +88,7 @@
     "pop_df['Population_Sum'] = pop_df.groupby('State')['Population'].transform('sum')\n",
     "pop_df['Population_Fraction'] = pop_df['Population'] / pop_df['Population_Sum']\n",
     "\n",
-    "# Subset the dataframe and sort by FIPS code :\n",
+    "# Subset the dataframe and sort by FIPS code:\n",
     "pop_df = pop_df[['FIPS', 'State', 'Population', 'Population_Fraction']]\n",
     "pop_df = pop_df.sort_values(['FIPS'])\n",
     "\n",
@@ -230,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "4b04f656-5fab-4fcb-86db-63c64db9c2c0",
    "metadata": {},
    "outputs": [],
@@ -310,9 +178,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_df = process_state_meteorology_time_series(data_input_dir = data_input_dir, \n",
-    "                                                  data_output_dir = data_output_dir, \n",
-    "                                                  year = 2017)\n",
+    "for year in range(1980,2020,1):\n",
+    "    output_df = process_state_meteorology_time_series(data_input_dir = data_input_dir, \n",
+    "                                                      data_output_dir = data_output_dir, \n",
+    "                                                      year = year)\n",
     "\n",
     "output_df\n"
    ]
