--- a/analyses/notebooks/ldc_variability_analysis.ipynb
+++ b/analyses/notebooks/ldc_variability_analysis.ipynb
@@ -453,9 +453,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3.9.4_tell",
+   "display_name": "py3.9.15_std",
    "language": "python",
-   "name": "py3.9.4_tell"
+   "name": "py3.9.15_std"
   },
   "language_info": {
    "codemirror_mode": {
@@ -467,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
