Worked on the crazy pseudocolor plot

--- a/analyses/notebooks/process_interconnection_load_time_series.ipynb
+++ b/analyses/notebooks/process_interconnection_load_time_series.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "27e597e9-538f-41d4-afa9-a268b10ab1df",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "id": "bd887600-32da-46dc-b411-fa63c75f564f",
    "metadata": {
     "pycharm": {
@@ -48,7 +48,7 @@
     "# Identify the data input and output directories:\n",
     "data_input_dir =  '/Users/burl878/Documents/IMMM/Data/TELL/Production_Runs/tell_data/'\n",
     "metadata_input_dir =  '/Users/burl878/Documents/IMMM/Data/TELL/Analysis/'\n",
-    "data_output_dir =  '/Users/burl878/Documents/IMMM/Data/TELL/Production_Runs/tell_data/outputs/postprocessed/Interconnection_Load_Time_Series/'\n"
+    "data_output_dir =  '/Users/burl878/Documents/IMMM/Data/TELL/Production_Runs/tell_data/outputs/postprocessed/interconnection_load_time_series/'\n"
    ]
   },
   {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "id": "947b41c7-c488-4716-99d1-c98f4a91b5b9",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
     "        merged_df = merged_df[['Time_UTC', 'Interconnection', 'Interconnection_Load_MWh']].drop_duplicates()\n",
     "            \n",
     "        # Compute the annual percentile for each hourly load value:\n",
-    "        merged_df['Percentile'] = merged_df['Interconnection_Load_MWh'].rank(pct=True).round(3)\n",
+    "        merged_df['Percentile'] = merged_df.groupby(['Interconnection'])['Interconnection_Load_MWh'].rank(pct=True).round(3)\n",
     "            \n",
     "        # Store the output in a new dataframe:\n",
     "        if year == start_year:\n",
@@ -118,13 +118,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 14,
    "id": "4b04f656-5fab-4fcb-86db-63c64db9c2c0",
    "metadata": {},
    "outputs": [],
    "source": [
     "process_interconnection_load_time_series(data_input_dir = data_input_dir, \n",
-    "                                         scenario = 'rcp85hotter_ssp5')\n"
+    "                                         scenario = 'historic')\n"
    ]
   },
   {
