Updated analysis notebooks

--- a/analyses/notebooks/process_interconnection_load_time_series.ipynb
+++ b/analyses/notebooks/process_interconnection_load_time_series.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "bd887600-32da-46dc-b411-fa63c75f564f",
    "metadata": {
     "pycharm": {
@@ -46,9 +46,9 @@
    "outputs": [],
    "source": [
     "# Identify the data input and output directories:\n",
-    "data_input_dir =  '/Users/burl878/Documents/IMMM/Data/TELL/Production_Runs/tell_data/'\n",
+    "data_input_dir =  '/Users/burl878/Documents/IMMM/Data/TELL/Production_Runs/tell_data/outputs/tell_output/'\n",
     "metadata_input_dir =  '/Users/burl878/Documents/IMMM/Data/TELL/Analysis/'\n",
-    "data_output_dir =  '/Users/burl878/Documents/IMMM/Data/TELL/Production_Runs/tell_data/outputs/postprocessed/interconnection_load_time_series/'\n"
+    "data_output_dir =  '/Users/burl878/Documents/IMMM/Data/TELL/Analysis/Interconnection_Load_Time_Series/'\n"
    ]
   },
   {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "367300aa-77bc-4985-8b82-85290eae7502",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "id": "947b41c7-c488-4716-99d1-c98f4a91b5b9",
    "metadata": {},
    "outputs": [],
@@ -84,25 +84,33 @@
     "    if scenario == 'historic':\n",
     "       start_year = 1980; end_year = 2020; interval = 1\n",
     "    else:\n",
-    "       start_year = 2020; end_year = 2100; interval = 5\n",
+    "       start_year = 2020; end_year = 2100; interval = 1\n",
     "        \n",
     "    # Loop over the years from the start_year to the end_year:\n",
     "    for year in range(start_year, end_year, interval):\n",
     "        # Read in the TELL BA output file for that year and scenario:\n",
-    "        tell_df = pd.read_csv(data_input_dir + 'outputs/tell_output/' + scenario + '/' + str(year) + '/TELL_Balancing_Authority_Hourly_Load_Data_' + str(year) + '_Scaled_' + str(year) + '.csv')\n",
+    "        tell_df = pd.read_csv(data_input_dir + scenario + '/' + str(year) + '/TELL_Balancing_Authority_Hourly_Load_Data_' + str(year) + '_Scaled_' + str(year) + '.csv')\n",
     "             \n",
     "        # Merge in the interconnection mapping using common BA codes:\n",
     "        merged_df = pd.merge(tell_df, ba_mapping, on='BA_Code')\n",
     "            \n",
     "        # Sum the BA-level hourly loads into interconnection-level hourly loads:\n",
-    "        merged_df['Interconnection_Load_MWh'] = merged_df.groupby(['Interconnection', 'Time_UTC'])['Scaled_TELL_BA_Load_MWh'].transform('sum').round(3)  \n",
+    "        merged_df['Load_MWh'] = merged_df.groupby(['Interconnection', 'Time_UTC'])['Scaled_TELL_BA_Load_MWh'].transform('sum').round(3)  \n",
     "            \n",
     "        # Only keep the columns we need and subset to the unique values:\n",
-    "        merged_df = merged_df[['Time_UTC', 'Interconnection', 'Interconnection_Load_MWh']].drop_duplicates()\n",
-    "            \n",
+    "        merged_df = merged_df[['Time_UTC', 'Interconnection', 'Load_MWh']].drop_duplicates()\n",
+    "        \n",
     "        # Compute the annual percentile for each hourly load value:\n",
-    "        merged_df['Percentile'] = merged_df.groupby(['Interconnection'])['Interconnection_Load_MWh'].rank(pct=True).round(3)\n",
-    "            \n",
+    "        merged_df['Percentile_Load'] = merged_df.groupby(['Interconnection'])['Load_MWh'].rank(pct=True).round(3)\n",
+    "        \n",
+    "        # Compute the normalized load for each hourly load value:\n",
+    "        merged_df['Load_Mean'] = merged_df.groupby(['Interconnection'])['Load_MWh'].transform('mean')\n",
+    "        merged_df['Load_STD'] = merged_df.groupby(['Interconnection'])['Load_MWh'].transform('std')\n",
+    "        merged_df['Normalized_Load'] = ((merged_df['Load_MWh'] - merged_df['Load_Mean']) / merged_df['Load_STD']).round(2)\n",
+    "        \n",
+    "        # Only keep the columns we need:\n",
+    "        merged_df = merged_df[['Time_UTC', 'Interconnection', 'Load_MWh', 'Percentile_Load', 'Normalized_Load']]\n",
+    "        \n",
     "        # Store the output in a new dataframe:\n",
     "        if year == start_year:\n",
     "           output_df = merged_df\n",
@@ -113,18 +121,179 @@
     "        del tell_df, merged_df\n",
     "            \n",
     "    # Write out the dataframe to a .csv file:\n",
-    "    output_df.to_csv((os.path.join(data_output_dir, (scenario + '.csv'))), sep=',', index=False)\n"
+    "    output_df.to_csv((os.path.join(data_output_dir, (scenario + '_Load_Time_Series.csv'))), sep=',', index=False)\n",
+    "\n",
+    "    return output_df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 60,
    "id": "4b04f656-5fab-4fcb-86db-63c64db9c2c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Time_UTC</th>\n",
+       "      <th>Interconnection</th>\n",
+       "      <th>Load_MWh</th>\n",
+       "      <th>Percentile_Load</th>\n",
+       "      <th>Normalized_Load</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-01 01:00:00</td>\n",
+       "      <td>EIC</td>\n",
+       "      <td>333160.69</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>-0.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-01-01 02:00:00</td>\n",
+       "      <td>EIC</td>\n",
+       "      <td>327647.21</td>\n",
+       "      <td>0.447</td>\n",
+       "      <td>-0.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-01-01 03:00:00</td>\n",
+       "      <td>EIC</td>\n",
+       "      <td>317783.13</td>\n",
+       "      <td>0.365</td>\n",
+       "      <td>-0.44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-01-01 04:00:00</td>\n",
+       "      <td>EIC</td>\n",
+       "      <td>307857.30</td>\n",
+       "      <td>0.289</td>\n",
+       "      <td>-0.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-01-01 05:00:00</td>\n",
+       "      <td>EIC</td>\n",
+       "      <td>296846.44</td>\n",
+       "      <td>0.216</td>\n",
+       "      <td>-0.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113875</th>\n",
+       "      <td>2099-12-31 19:00:00</td>\n",
+       "      <td>ERCOT</td>\n",
+       "      <td>81620.84</td>\n",
+       "      <td>0.225</td>\n",
+       "      <td>-0.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113876</th>\n",
+       "      <td>2099-12-31 20:00:00</td>\n",
+       "      <td>ERCOT</td>\n",
+       "      <td>82159.70</td>\n",
+       "      <td>0.238</td>\n",
+       "      <td>-0.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113877</th>\n",
+       "      <td>2099-12-31 21:00:00</td>\n",
+       "      <td>ERCOT</td>\n",
+       "      <td>83014.88</td>\n",
+       "      <td>0.259</td>\n",
+       "      <td>-0.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113878</th>\n",
+       "      <td>2099-12-31 22:00:00</td>\n",
+       "      <td>ERCOT</td>\n",
+       "      <td>82018.60</td>\n",
+       "      <td>0.234</td>\n",
+       "      <td>-0.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113879</th>\n",
+       "      <td>2099-12-31 23:00:00</td>\n",
+       "      <td>ERCOT</td>\n",
+       "      <td>80194.41</td>\n",
+       "      <td>0.197</td>\n",
+       "      <td>-0.86</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2103831 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Time_UTC Interconnection   Load_MWh  Percentile_Load  \\\n",
+       "0       2020-01-01 01:00:00             EIC  333160.69            0.500   \n",
+       "1       2020-01-01 02:00:00             EIC  327647.21            0.447   \n",
+       "2       2020-01-01 03:00:00             EIC  317783.13            0.365   \n",
+       "3       2020-01-01 04:00:00             EIC  307857.30            0.289   \n",
+       "4       2020-01-01 05:00:00             EIC  296846.44            0.216   \n",
+       "...                     ...             ...        ...              ...   \n",
+       "113875  2099-12-31 19:00:00           ERCOT   81620.84            0.225   \n",
+       "113876  2099-12-31 20:00:00           ERCOT   82159.70            0.238   \n",
+       "113877  2099-12-31 21:00:00           ERCOT   83014.88            0.259   \n",
+       "113878  2099-12-31 22:00:00           ERCOT   82018.60            0.234   \n",
+       "113879  2099-12-31 23:00:00           ERCOT   80194.41            0.197   \n",
+       "\n",
+       "        Normalized_Load  \n",
+       "0                 -0.22  \n",
+       "1                 -0.30  \n",
+       "2                 -0.44  \n",
+       "3                 -0.58  \n",
+       "4                 -0.74  \n",
+       "...                 ...  \n",
+       "113875            -0.81  \n",
+       "113876            -0.79  \n",
+       "113877            -0.77  \n",
+       "113878            -0.80  \n",
+       "113879            -0.86  \n",
+       "\n",
+       "[2103831 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "process_interconnection_load_time_series(data_input_dir = data_input_dir, \n",
-    "                                         scenario = 'historic')\n"
+    "output_df = process_interconnection_load_time_series(data_input_dir = data_input_dir, \n",
+    "                                                     scenario = 'rcp85hotter_ssp5')\n",
+    "\n",
+    "output_df\n"
    ]
   },
   {
