--- a/analyses/notebooks/process_interconnection_time_series.ipynb
+++ b/analyses/notebooks/process_interconnection_time_series.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "27e597e9-538f-41d4-afa9-a268b10ab1df",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "bd887600-32da-46dc-b411-fa63c75f564f",
    "metadata": {
     "pycharm": {
@@ -48,10 +48,9 @@
    "outputs": [],
    "source": [
     "# Identify the data input and output directories:\n",
-    "data_input_dir =  '/Users/burl878/Documents/IMMM/Data/TELL/Production_Runs/tell_data/wrf_tell_counties_output/historic/'\n",
+    "data_input_dir =  '/Users/burl878/Documents/IMMM/Data/TELL/Production_Runs/tell_data/wrf_tell_counties_output/'\n",
     "metadata_input_dir = '/Users/burl878/Documents/IMMM/Data/TELL_Input_Data/forward_execution/Population_Forcing/'\n",
-    "data_output_dir =  '/Users/burl878/Documents/IMMM/Data/TELL/Analysis/Interconnection_Meteorology_Time_Series/'\n",
-    "image_output_dir =  '/Users/burl878/Documents/IMMM/Images/TELL/Analysis/Interconnection_Meteorology_Time_Series/'\n"
+    "data_output_dir =  '/Users/burl878/Documents/IMMM/Data/TELL/Analysis/Interconnection_Meteorology_Time_Series/'\n"
    ]
   },
   {
@@ -64,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "27647568-c445-40ce-9701-846667558e71",
    "metadata": {},
    "outputs": [],
@@ -85,153 +84,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "947b41c7-c488-4716-99d1-c98f4a91b5b9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/tw/332pg48n0cb0jrl9_s87l48m0000gn/T/ipykernel_6339/4254740590.py:27: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  pop_df['Interconnection'].loc[pop_df['State'].isin(wecc)] = 'WECC'\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>FIPS</th>\n",
-       "      <th>State</th>\n",
-       "      <th>Population</th>\n",
-       "      <th>Interconnection</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1001</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>55869</td>\n",
-       "      <td>EIC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1003</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>223234</td>\n",
-       "      <td>EIC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1005</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>24686</td>\n",
-       "      <td>EIC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1007</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>22394</td>\n",
-       "      <td>EIC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1009</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>57826</td>\n",
-       "      <td>EIC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3137</th>\n",
-       "      <td>56037</td>\n",
-       "      <td>Wyoming</td>\n",
-       "      <td>42343</td>\n",
-       "      <td>WECC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3138</th>\n",
-       "      <td>56039</td>\n",
-       "      <td>Wyoming</td>\n",
-       "      <td>23464</td>\n",
-       "      <td>WECC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3139</th>\n",
-       "      <td>56041</td>\n",
-       "      <td>Wyoming</td>\n",
-       "      <td>20226</td>\n",
-       "      <td>WECC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3140</th>\n",
-       "      <td>56043</td>\n",
-       "      <td>Wyoming</td>\n",
-       "      <td>7805</td>\n",
-       "      <td>WECC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3141</th>\n",
-       "      <td>56045</td>\n",
-       "      <td>Wyoming</td>\n",
-       "      <td>6927</td>\n",
-       "      <td>WECC</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3142 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       FIPS    State  Population Interconnection\n",
-       "0      1001  Alabama       55869             EIC\n",
-       "1      1003  Alabama      223234             EIC\n",
-       "2      1005  Alabama       24686             EIC\n",
-       "3      1007  Alabama       22394             EIC\n",
-       "4      1009  Alabama       57826             EIC\n",
-       "...     ...      ...         ...             ...\n",
-       "3137  56037  Wyoming       42343            WECC\n",
-       "3138  56039  Wyoming       23464            WECC\n",
-       "3139  56041  Wyoming       20226            WECC\n",
-       "3140  56043  Wyoming        7805            WECC\n",
-       "3141  56045  Wyoming        6927            WECC\n",
-       "\n",
-       "[3142 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Read in the county-level population data:\n",
     "pop_df = pd.read_csv(metadata_input_dir + 'county_populations_2000_to_2019_long_format.csv')\n",
@@ -269,16 +125,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4b04f656-5fab-4fcb-86db-63c64db9c2c0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define a function to process the interconnection-level time series for a given year\n",
-    "def process_ics_meteorology_time_series(data_input_dir: str, data_output_dir: str, year: int):\n",
+    "def process_ics_meteorology_time_series(data_input_dir: str, data_output_dir: str, scenario: str, year: int):\n",
     "    \n",
     "    # Create a list of all county meteorology files in the input directory:\n",
-    "    list_of_files = glob(os.path.join(data_input_dir, str(year), '*.csv'))\n",
+    "    list_of_files = glob(os.path.join(data_input_dir, scenario, str(year), '*.csv'))\n",
     "    \n",
     "    # Loop over that list process each file:\n",
     "    for file in range(len(list_of_files)):\n",
@@ -339,31 +195,41 @@
     "    output_df = output_df.sort_values(['Interconnection', 'Time_UTC'])\n",
     "\n",
     "    # Create the ouput filename:    \n",
-    "    csv_output_filename = os.path.join(data_output_dir, ('Interconnection_Meteorology_' + str(year) + '.csv'))\n",
+    "    csv_output_filename = os.path.join(data_output_dir, scenario, ('Interconnection_Meteorology_' + str(year) + '.csv'))\n",
     "        \n",
     "    # Write out the dataframe to a .csv file:\n",
     "    output_df.to_csv(csv_output_filename, sep=',', index=False)\n",
+    "    \n",
+    "    # Print out the progress:\n",
+    "    print(('Scenario = ' + scenario + ', Year = ' + str(year)))\n",
     "    \n",
     "    return output_df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "b38e6c6d-8983-4b44-8901-68b335b9c30f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for year_to_process in range(1992,2017,1):\n",
+    "for year_to_process in range(2060,2100,1):\n",
     "    output_df = process_ics_meteorology_time_series(data_input_dir = data_input_dir, \n",
-    "                                                    data_output_dir = data_output_dir, \n",
+    "                                                    data_output_dir = data_output_dir,\n",
+    "                                                    scenario = 'rcp85cooler',\n",
+    "                                                    year = year_to_process)\n",
+    "\n",
+    "for year_to_process in range(2060,2100,1):\n",
+    "    output_df = process_ics_meteorology_time_series(data_input_dir = data_input_dir, \n",
+    "                                                    data_output_dir = data_output_dir,\n",
+    "                                                    scenario = 'rcp85hotter',\n",
     "                                                    year = year_to_process)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70d151af-eaf7-434a-914a-1e491aedd82c",
+   "id": "f30dc458-9c31-4716-b606-8717249653c4",
    "metadata": {},
    "outputs": [],
    "source": []
