--- a/analyses/notebooks/tell_runs_exp_group_b.ipynb
+++ b/analyses/notebooks/tell_runs_exp_group_b.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "86db683a-70a2-4f89-a1d6-4c6d5f180272",
    "metadata": {
     "pycharm": {
@@ -120,66 +120,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "04afab9a",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Start time =  2024-01-15 14:11:15.278347\n",
-      "End time =  2024-01-15 14:12:24.044395\n",
-      "Elapsed time =  0:01:08.766139\n",
-      "Start time =  2024-01-15 14:12:24.404304\n",
-      "End time =  2024-01-15 14:13:33.623720\n",
-      "Elapsed time =  0:01:09.219519\n",
-      "Start time =  2024-01-15 14:13:33.989435\n",
-      "End time =  2024-01-15 14:14:42.857313\n",
-      "Elapsed time =  0:01:08.867979\n",
-      "Start time =  2024-01-15 14:14:43.210924\n",
-      "End time =  2024-01-15 14:15:51.100908\n",
-      "Elapsed time =  0:01:07.890087\n",
-      "Start time =  2024-01-15 14:15:51.461805\n",
-      "End time =  2024-01-15 14:16:59.534073\n",
-      "Elapsed time =  0:01:08.072365\n",
-      "Start time =  2024-01-15 14:16:59.890872\n",
-      "End time =  2024-01-15 14:18:08.168096\n",
-      "Elapsed time =  0:01:08.277324\n",
-      "Start time =  2024-01-15 14:18:08.536820\n",
-      "End time =  2024-01-15 14:19:17.445506\n",
-      "Elapsed time =  0:01:08.908787\n",
-      "Start time =  2024-01-15 14:19:17.808864\n",
-      "End time =  2024-01-15 14:20:25.759794\n",
-      "Elapsed time =  0:01:07.951043\n",
-      "Start time =  2024-01-15 14:20:26.115637\n",
-      "End time =  2024-01-15 14:21:33.648606\n",
-      "Elapsed time =  0:01:07.533066\n",
-      "Start time =  2024-01-15 14:21:34.003552\n",
-      "End time =  2024-01-15 14:22:41.749502\n",
-      "Elapsed time =  0:01:07.746064\n",
-      "Start time =  2024-01-15 14:22:42.106877\n",
-      "End time =  2024-01-15 14:23:50.701546\n",
-      "Elapsed time =  0:01:08.594775\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run the TELL model forward in time:\n",
-    "for year in range(2030,2041,1):\n",
+    "for year in range(1982,2020,1):\n",
     "    summary_df, ba_time_series_df, state_time_series_df = tell.execute_forward(year_to_process = str(year),\n",
-    "                                                                               gcam_target_year = '2035', \n",
-    "                                                                               scenario_to_process = 'rcp45hotter_ssp5',\n",
-    "                                                                               data_output_dir = '/Users/burl878/Documents/IMMM/Data/TELL/Production_Runs/tell_data/outputs/tell_output/Weather_Variability_Runs',\n",
+    "                                                                               gcam_target_year = '2019', \n",
+    "                                                                               scenario_to_process = 'historic',\n",
+    "                                                                               data_output_dir = '/Users/burl878/Documents/IMMM/Data/TELL/Runs_for_NERC_Analysis',\n",
     "                                                                               gcam_usa_input_dir = '/Users/burl878/Documents/IMMM/Data/TELL/Production_Runs/tell_data/gcamusa_data',\n",
     "                                                                               map_input_dir = '/Users/burl878/Documents/IMMM/Data/TELL/Production_Runs/tell_data/ba_service_territory_data',\n",
     "                                                                               mlp_input_dir = '/Users/burl878/Documents/IMMM/Data/TELL/Production_Runs/tell_data/outputs/mlp_output',\n",
     "                                                                               pop_input_dir = '/Users/burl878/Documents/IMMM/Data/TELL/Production_Runs/tell_data/population_data',\n",
-    "                                                                               save_county_data = False)\n"
+    "                                                                               save_county_data = True)\n"
    ]
   },
   {
